// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Popover/demo/basic.md correctly 1`] = `
<button
  class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
  type="button"
>
  <span>
    Hover
  </span>
</button>
`;

exports[`renders Popover/demo/popupVisible.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Hover
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Will not close when moved out
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Popover/demo/position.md correctly 1`] = `
<div
  style="position:relative;width:440px;height:280px"
>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:0;left:70px"
    type="button"
  >
    <span>
      TL
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:0;left:180px"
    type="button"
  >
    <span>
      Top
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:0;left:290px"
    type="button"
  >
    <span>
      TR
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:60px;left:10px"
    type="button"
  >
    <span>
      LT
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:120px;left:10px"
    type="button"
  >
    <span>
      Left
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:180px;left:10px"
    type="button"
  >
    <span>
      LB
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:60px;left:350px"
    type="button"
  >
    <span>
      RT
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:120px;left:350px"
    type="button"
  >
    <span>
      Right
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:180px;left:350px"
    type="button"
  >
    <span>
      RB
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:240px;left:70px"
    type="button"
  >
    <span>
      BL
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:240px;left:180px"
    type="button"
  >
    <span>
      Bottom
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:240px;left:290px"
    type="button"
  >
    <span>
      BR
    </span>
  </button>
</div>
`;

exports[`renders Popover/demo/trigger.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Hover
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Click
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      tabindex="0"
      type="button"
    >
      <span>
        Focus
      </span>
    </button>
  </div>
</div>
`;
